--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,26 @@
-# Compiled class file
-*.class
+# Android Studio
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/captures
+.externalNativeBuild
+.cxx
+local.properties
 
-# Log file
-*.log
+# Build output
+/build
+/androidApp/build
+/shared/build
+/iosApp/build
+/buildSrc/build
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Xcode
+iosApp/iosApp.xcodeproj/project.xcworkspace/* 
+iosApp/iosApp.xcodeproj/xcuserdata/*
